Better colors. Remove tmux errors.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,7 +7,7 @@ set -g default-terminal "screen-256color"
 
 set-option -g status on
 set-option -g status-interval 2
-set-option -g status-utf8 on
+# set-option -g status-utf8 on
 set-option -g status-justify "left"
 set-option -g status-left-length 60
 set-option -g status-right-length 90
@@ -61,10 +61,10 @@ set-window-option -g mode-keys vi
 set -s escape-time 1
 
 # utf8 support
-set-window-option -g utf8 on
+# set-window-option -g utf8 on
 
 # Disable mouse
-set-window-option -g mode-mouse off
+# set-window-option -g mode-mouse off
 
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
