Explicitly configure mouse for tmux + nvim

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -71,3 +71,6 @@ set -s escape-time 1
 # client connected to *that window*. Much more reasonable.
 setw -g aggressive-resize on
 
+# Enable mouse scrolling
+set -g mouse on
+
