--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,10 +16,10 @@ set-option -g status-right-length 90
 # Fancy 'current window' format..
 #set-window-option -g window-status-current-format "#[fg=colour235, bg=colour24]#[fg=colour250, bg=colour24] #I #W #[fg=colour235, bg=colour24]"
 
-set-window-option -g window-status-current-format " #[fg=colour187]#I #W "
-set-window-option -g window-status-format " #[fg=colour247]#I #W "
-set-window-option -g window-status-current-bg colour235
-set -g status-bg colour235
+# set-window-option -g window-status-current-format " #[fg=colour187]#I #W "
+# set-window-option -g window-status-format " #[fg=colour247]#I #W "
+# set-window-option -g window-status-current-bg colour235
+# set -g status-bg colour235
 
 # Allow programs to rename titles..
 set-window-option -g allow-rename
@@ -74,3 +74,6 @@ setw -g aggressive-resize on
 # Enable mouse scrolling
 set -g mouse on
 
+# Enable copy-to-clipboard in Gnome Terminal
+set -s set-clipboard off
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
