--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -8,3 +8,8 @@ symbol = "➜"     # The "symbol" segment is being set to "➜"
 # Disable the package module, hiding it from the prompt completely
 # [package]
 # disabled = true
+
+[kubernetes]
+symbol = "⛵ "
+style = "bold blue"
+disabled = true
