--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -54,6 +54,13 @@ bind + resize-pane -U 10
 # vi-style controls for copy mode
 set-window-option -g mode-keys vi
 
+# Configure new splits to open with the same current working directory as the
+# current split
+# https://unix.stackexchange.com/questions/12032/how-to-create-a-new-window-on-the-current-directory-in-tmux
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 # Not sure what this does yet..
 #set-option -g status-keys vi
 
