--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -81,4 +81,8 @@ set -g mouse on
 # Enable copy-to-clipboard in Gnome Terminal
 # https://unix.stackexchange.com/a/349020
 set -s set-clipboard off
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
+
+
+# set -g @yank_action 'copy-pipe-no-clear'
