--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,56 +1,105 @@
-# Font configuration (changes require restart)
-#
-# Important font attributes like antialiasing, subpixel aa, and hinting can be
-# controlled through fontconfig. Specifically, the following attributes should
-# have an effect:
-#   - hintstyle
-#   - antialias
-#   - lcdfilter
-#   - rgba
-#
-# For instance, if you wish to disable subpixel antialiasing, you might set the
-# rgba property to `none`. If you wish to completely disable antialiasing, you
-# can set antialias to `false`.
-#
-# Please see these resources for more information on how to use fontconfig:
-#   - https://wiki.archlinux.org/index.php/font_configuration#Fontconfig_configuration
-#   - file:///usr/share/doc/fontconfig/fontconfig-user.html
+window:
+  opacity: 0.75
+
+# Colors (Dracula PRO - Van Helsing)
+colors:
+  # Default colors
+  primary:
+    background: '0x0b0d0f'
+    foreground: '0xf8f8f2'
+
+    # Bright and dim foreground colors
+    #
+    # The dimmed foreground color is calculated automatically if it is not present.
+    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
+    # is `false`, the normal foreground color will be used.
+    #dim_foreground: '0x9a9a9a'
+    #bright_foreground: '0xffffff'
+
+  # Cursor colors
+  #
+  # Colors which should be used to draw the terminal cursor. If these are unset,
+  # the cursor color will be the inverse of the cell color.
+  cursor:
+    text: '0x414d58'
+    cursor: '0xf8f8f2'
+
+  # Selection colors
+  #
+  # Colors which should be used to draw the selection area. If selection
+  # background is unset, selection color will be the inverse of the cell colors.
+  # If only text is unset the cell text color will remain the same.
+  selection:
+    text: '0xf8f8f2'
+    background: '0x414d58'
+
+  # Normal colors
+  normal:
+    black: '0x0b0d0f'
+    red: '0xff9580'
+    green: '0x8aff80'
+    yellow: '0xffff80'
+    blue: '0x9580ff'
+    magenta: '0xff80bf'
+    cyan: '0x80ffea'
+    white: '0xf8f8f2'
+
+  # Bright colors
+  bright:
+    # Tweaked because black-on-black is nigh unreadable:
+    # black: '0x0b0d0f'
+    black: '0x768Ba7'
+    red: '0xffaa99'
+    green: '0xa2ff99'
+    yellow: '0xffff99'
+    blue: '0xaa99ff'
+    magenta: '0xff99cc'
+    cyan: '0x99ffee'
+    white: '0xffffff'
+
 font:
   # Normal (roman) font face
   normal:
-    family: Hack
+    # Font family
+    #
+    # Default:
+    #   - (macOS) Menlo
+    #   - (Linux/BSD) monospace
+    #   - (Windows) Consolas
+    family: Delugia
+
     # The `style` can be specified to pick a specific face.
     style: Regular
 
   # Bold font face
   bold:
-    family: monospace
+    # Font family
+    #
+    # If the bold family is not specified, it will fall back to the
+    # value specified for the normal font.
+    family: Delugia
+
     # The `style` can be specified to pick a specific face.
-    #style: Bold
+    style: Bold
 
   # Italic font face
   italic:
-    family: monospace
+    # Font family
+    #
+    # If the italic family is not specified, it will fall back to the
+    # value specified for the normal font.
+    family: Delugia
+
     # The `style` can be specified to pick a specific face.
-    #style: Italic
+    style: Italic
 
-  # Point size
-  size: 11.0
+  # Bold italic font face
+  bold_italic:
+    # Font family
+    #
+    # If the bold italic family is not specified, it will fall back to the
+    # value specified for the normal font.
+    family: Delugia
 
-  # Offset is the extra space around each character. `offset.y` can be thought of
-  # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
-  offset:
-    x: 0
-    y: 0
-
-  # Glyph offset determines the locations of the glyphs within their cells with
-  # the default being at the bottom. Increasing `x` moves the glyph to the right,
-  # increasing `y` moves the glyph upwards.
-  glyph_offset:
-    x: 0
-    y: 0
-
-colors:
-  # Default colors
-  primary:
-    background: '0x888888'
+    # The `style` can be specified to pick a specific face.
+    style: Bold Italic
